docker/prod/k8s/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: jutonz/k8s-playground-prod-nginx:10
        name: nginx
        volumeMounts:
          - mountPath: /etc/ssl/mycerts/
            name: tls-certs
        ports:
        - containerPort: 443
      restartPolicy: Always
      volumes:
      - name: tls-certs
        hostPath:
          path: /etc/ssl/mycerts
