docker/prod/k8s/psql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: psql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - image: jutonz/k8s-playground-prod-psql:1
        name: psql
      restartPolicy: Always
