docker/prod/k8s/rails-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - image: jutonz/k8s-playground-prod-rails:5
        name: rails
      restartPolicy: Always
