docker/prod/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: app-port
    port: 4444
    targetPort: 80
  selector:
    app: nginx
