docker/prod/k8s/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
  namespace: default
spec:
  selector:
    app: rails
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
