docker/prod/k8s/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - k8s-test2.jutonz.com
    secretName: nginx-tls
  rules:
  - host: k8s-test2.jutonz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
