docker/prod/k8s/nginx-ingress-biz.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-biz
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - rails.notmalware.biz
    secretName: notmalware-lego-secret
  rules:
  - host: rails.notmalware.biz
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
