docker/prod/k8s/nginx-ingress-toniazzoco.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-toniazzoco
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - toniazzo.co
    secretName: toniazzoco-lego-secret
  rules:
  - host: toniazzo.co
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
