docker/prod/k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - k8s.jutonz.com
    secretName: k8s-lego-secret
  rules:
  - host: k8s.jutonz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
