docker/prod/k8s/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: 165.227.66.86
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 4444
